--- a/src/app/dashboard/page.module.scss
+++ b/src/app/dashboard/page.module.scss
@@ -21,6 +21,7 @@
             .right {
                 background-color: var(--card);
                 border-radius: 0.5rem;
+                overflow: hidden;
             }
         }
 
